[tool.poetry]
name = "repl-nix-d10-blackjack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_d10_blackjack"}]

[tool.poetry.dependencies]
python = "^3.10"
replit = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
